--- a/portfolio_details1.html
+++ b/portfolio_details1.html
@@ -249,26 +249,26 @@
 
                 <div class="container mt-8 mt-md-15 pb-60">
                     <div class="row g-6">
-                        <div data-aos="fade-left" class="col-12">
+                        <div data-aos="fade-left" class="col-12 col-xl-3">
                             <div class="d-flex flex-column gap-5 position-sticky top-5 brn4 p-3 rounded">
                                 <div class="row g-6">
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Client:</span>
                                         <span class="n5-color fs-six fw-medium">Distribute, Primus, Bell, Virgin
                                             Plus</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Services</span>
                                         <span class="n5-color fs-six fw-medium">UX Design / Prototyping / Testing /
                                             Dev
                                             Handoffs</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Technologies</span>
                                         <span class="n5-color fs-six fw-medium">Jira, Confluence, Figma, HTML5, SCSS,
                                             Bootstrap5</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Website</span>
                                         <a
                                             href="https://myaccount.distributel.ca/Distributel_Portal/#/account-creation/register-create-account">
@@ -279,10 +279,10 @@
                             </div>
                         </div>
 
-                        <div data-aos="fade-right" class="col-12">
+                        <div data-aos="fade-right" class="col-12 col-xl-9">
                             <div class="project-details-content d-flex flex-column gap-8 gap-md-15">
                                 <div data-aos="fade-up">
-                                    <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
+                                    <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-0 mb-2 mb-md-4">
                                         Customer Service Portal
                                     </h3>
                                     <p class="fs-seven n5-color">
@@ -305,7 +305,7 @@
 
                                     <div class="row g-3 g-md-6">
                                         <div data-aos="fade-up" data-aos-duration="500"
-                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 col-xxl-3 aos-init aos-animate">
+                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 aos-init aos-animate">
                                             <div class="service-card px-4 px-lg-8 py-5 py-lg-10">
                                                 <div class="d-flex gap-3 fs-two n5-color">
                                                     <i class="ph ph-user-circle-dashed"></i>
@@ -317,7 +317,7 @@
                                         </div>
 
                                         <div data-aos="fade-up" data-aos-duration="500"
-                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 col-xxl-3 aos-init aos-animate">
+                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 aos-init aos-animate">
                                             <div class="service-card px-4 px-lg-8 py-5 py-lg-10">
                                                 <div class="d-flex gap-3 fs-two n5-color">
                                                     <i class="ph ph-user-circle-gear"></i>
@@ -329,7 +329,7 @@
                                         </div>
 
                                         <div data-aos="fade-up" data-aos-duration="500"
-                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 col-xxl-3 aos-init aos-animate">
+                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 aos-init aos-animate">
                                             <div class="service-card px-4 px-lg-8 py-5 py-lg-10">
                                                 <div class="d-flex gap-3 fs-two n5-color">
                                                     <i class="ph ph-user-circle-plus"></i>
@@ -366,37 +366,37 @@
                                     </div>
                                 </div>
 
-                                <div data-aos="fade-up">
+                                <div data-aos="fade-up" class="approach">
                                     <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                                         The Approach & Solution
                                     </h3>
 
                                     <ul class="text-seven n4-color mb-5 mb-md-10">
-                                        <li class="mb-3">
+                                        <li class="mb-3 service-card listCard">
                                             <b>Account Management:</b>
                                             users could create, view, and modify personal and service account
                                             information
                                         </li>
-                                        <li class="mb-3">
+                                        <li class="mb-3 service-card listCard">
                                             <b>Multi-Account Linking:</b>
                                             customers were able to link multiple services (e.g., internet, phone) under
                                             a unified login
                                         </li>
-                                        <li class="mb-3">
+                                        <li class="mb-3 service-card listCard">
                                             <b>Order Tracking:</b>
                                             real-time updates on service requests, installations, and modifications,
                                             Payment
                                         </li>
-                                        <li class="mb-3">
+                                        <li class="mb-3 service-card listCard">
                                             <b>Integration:</b>
                                             secure payment processing, billing history, and invoice downloads
                                         </li>
-                                        <li class="mb-3">
+                                        <li class="mb-3 service-card listCard">
                                             <b>Brand Flexibility:</b>
                                             A configurable frontend and backend allowed easy
                                             white-label deployment for multiple brands
                                         </li>
-                                        <li class="mb-3">
+                                        <li class="mb-3 service-card listCard">
                                             <b>Mobile Optimization:</b>
                                             A fully responsive UI/UX design compatible with all major
                                             devices and screen sizes.
@@ -446,7 +446,7 @@
 
                                         </div>
                                         <div class="col-12 col-xl-6">
-                                            <div data-aos="fade-up">
+                                            <div data-aos="fade-up" class="mt-5 mt-md-10 mb-2">
                                                 <img src="./assets/images/site-map.png" alt="project"
                                                     class="w-100 object-fit-cover portfolio-details-img" />
                                             </div>
@@ -498,7 +498,7 @@
 
                                     <div class="row g-3 g-md-6">
                                         <div class="col-sm-12 overflow-hidden mb-5">
-                                            <img src="./assets/images/mockup.svg" alt="project"
+                                            <img src="./assets/images/mockup-landing.png" alt="project"
                                                 class="w-100 object-fit-cover portfolio-details-img" />
                                         </div>
 
