--- a/portfolio_details2.html
+++ b/portfolio_details2.html
@@ -241,18 +241,18 @@
 
                 <div class="container mt-8 mt-md-15 pb-60">
                     <div class="row g-6">
-                        <div data-aos="fade-left" class="col-12">
+                        <div data-aos="fade-left" class="col-12 col-xl-3">
                             <div class="d-flex flex-column gap-5 position-sticky top-5 brn4 p-3 rounded">
                                 <div class="row g-6">
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Client:</span>
                                         <span class="n5-color fs-six fw-medium">Youtema (Swiss website)</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Services</span>
                                         <span class="n5-color fs-six fw-medium">Web Design / Development</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Technologies</span>
                                         <span class="n5-color fs-six fw-medium">Figma/Adobe XD, Trello, HTML5, SCSS,
                                             Bootstrap5, Drupal</span>
@@ -261,7 +261,7 @@
                             </div>
                         </div>
 
-                        <div data-aos="fade-right" class="col-12">
+                        <div data-aos="fade-right" class="col-12 col-xl-9">
                             <div class="project-details-content d-flex flex-column gap-8 gap-md-15">
                                 <div class="overflow-hidden">
                                     <img src="./assets/images/project2-1.png" alt="project"
@@ -354,24 +354,24 @@
                                     </div>
 
                                 </div>
-                                <div data-aos="fade-up">
+                                <div data-aos="fade-up" class="approach">
                                     <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                                         The Approach & Solution
                                     </h3>
 
                                     <ul class="text-seven n4-color mb-5 mb-md-10">
-                                        <li class="mb-3">
+                                        <li class="mb-3 service-card listCard">
                                             <b>Simplified Checkouts:</b>
                                             Simplify the checkout process into clear steps, Highlight discounts and
                                             actual price comparisons
                                         </li>
 
-                                        <li class="mb-3">
+                                        <li class="mb-3 service-card listCard">
                                             <b>Device friendly layout:</b>
                                             Ensure a responsive design across devices
                                         </li>
 
-                                        <li class="mb-3">
+                                        <li class="mb-3 service-card listCard">
                                             <b>Process Research & Insights:</b>
                                             User interviews revealed a need for clarity in total pricing and fewer
                                             steps,
