--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -240,24 +240,24 @@
             <section class="py-60 mt-10 mt-lg-0">
                 <div class="container mt-8 mt-md-15 pb-60">
                     <div class="row g-6">
-                        <div data-aos="fade-left" class="col-12">
+                        <div data-aos="fade-left" class="col-12 col-xl-3">
                             <div class="d-flex flex-column gap-5 position-sticky top-5 brn4 p-3 rounded">
                                 <div class="row g-6">
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Client:</span>
                                         <span class="n5-color fs-six fw-medium">Bell, Virgin Plus, Distribute,
                                             Acanac</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Services</span>
                                         <span class="n5-color fs-six fw-medium">Web Design / Development</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Technologies</span>
                                         <span class="n5-color fs-six fw-medium">Figma, Jira, Confluence, HTML5, SCSS,
                                             Bootstrap5</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Website</span>
                                         <a href="https://www.bell.ca/Bell_Internet/Internet_access"
                                             class="n5-color fs-six fw-medium d-flex align-items-center gap-2">Live
@@ -268,7 +268,7 @@
                             </div>
                         </div>
 
-                        <div data-aos="fade-right" class="col-12">
+                        <div data-aos="fade-right" class="col-12 col-xl-9">
                             <div class="project-details-content d-flex flex-column gap-8 gap-md-15">
 
                                 <div data-aos="fade-up">
@@ -308,7 +308,7 @@
 
                                     <div class="row g-3 g-md-6">
                                         <div data-aos="fade-up" data-aos-duration="500"
-                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 col-xxl-3 aos-init aos-animate">
+                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 aos-init aos-animate">
                                             <div class="service-card px-4 px-lg-8 py-5 py-lg-10">
                                                 <div class="d-flex gap-3 fs-two n5-color">
                                                     <i class="ph ph-user-circle-dashed"></i>
@@ -320,7 +320,7 @@
                                         </div>
 
                                         <div data-aos="fade-up" data-aos-duration="500"
-                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 col-xxl-3 aos-init aos-animate">
+                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 aos-init aos-animate">
                                             <div class="service-card px-4 px-lg-8 py-5 py-lg-10">
                                                 <div class="d-flex gap-3 fs-two n5-color">
                                                     <i class="ph ph-money-wavy"></i>
@@ -332,7 +332,7 @@
                                         </div>
 
                                         <div data-aos="fade-up" data-aos-duration="500"
-                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 col-xxl-3 aos-init aos-animate">
+                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 aos-init aos-animate">
                                             <div class="service-card px-4 px-lg-8 py-5 py-lg-10">
                                                 <div class="d-flex gap-3 fs-two n5-color">
                                                     <i class="ph ph-smiley-sad"></i>
