--- a/portfolio_details4.html
+++ b/portfolio_details4.html
@@ -237,18 +237,18 @@
             <section class="pt-60 pb-60 mt-10 mt-lg-0">
                 <div class="container mt-8 mt-md-15 pb-60">
                     <div class="row g-6">
-                        <div data-aos="fade-left" class="col-12">
+                        <div data-aos="fade-left" class="col-12 col-xl-3">
                             <div class="d-flex flex-column gap-5 position-sticky top-5 brn4 p-3 rounded">
                                 <div class="row g-6">
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Client:</span>
                                         <span class="n5-color fs-six fw-medium">Fashion Clothing</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Services</span>
                                         <span class="n5-color fs-six fw-medium">Mobile App Design</span>
                                     </div>
-                                    <div class="col-12 col-xl-6">
+                                    <div class="col-12">
                                         <span class="n4-color fs-eight fw-medium d-block">Technologies</span>
                                         <span class="n5-color fs-six fw-medium">Figma, Prototyping, wireframes,
                                             Jira</span>
@@ -257,10 +257,8 @@
                             </div>
                         </div>
 
-                        <div data-aos="fade-right" class="col-12">
+                        <div data-aos="fade-right" class="col-12 col-xl-9">
                             <div class="project-details-content d-flex flex-column gap-8 gap-md-15">
-
-
                                 <div data-aos="zoom-in" class="page-heading">
                                     <h3 class="fs-five n5-color fw-semibold mt-5 mb-2 mb-md-4">
                                         Case Study: Online Clothing E-Commerce Mobile App
@@ -273,9 +271,7 @@
                                             mobile shopping experience
                                             for a modern clothing brand targeting tech friendly customers.</span>
                                     </p>
-
                                 </div>
-
                                 <div data-aos="fade-up">
                                     <h3 class="fs-five n5-color fw-semibold mt-5 mb-2 mb-md-4">
                                         Project Overview
@@ -297,7 +293,7 @@
 
                                     <div class="row g-3 g-md-6">
                                         <div data-aos="fade-up" data-aos-duration="500"
-                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 col-xxl-3 aos-init aos-animate">
+                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 aos-init aos-animate">
                                             <div class="service-card px-4 px-lg-8 py-5 py-lg-10">
                                                 <div class="d-flex gap-3 fs-two n5-color">
                                                     <i class="ph ph-user-circle-dashed"></i>
@@ -309,7 +305,7 @@
                                         </div>
 
                                         <div data-aos="fade-up" data-aos-duration="500"
-                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 col-xxl-3 aos-init aos-animate">
+                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 aos-init aos-animate">
                                             <div class="service-card px-4 px-lg-8 py-5 py-lg-10">
                                                 <div class="d-flex gap-3 fs-two n5-color">
                                                     <i class="ph ph-user-circle-gear"></i>
@@ -321,7 +317,7 @@
                                         </div>
 
                                         <div data-aos="fade-up" data-aos-duration="500"
-                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 col-xxl-3 aos-init aos-animate">
+                                            class="col-sm-6 col-md-4 col-lg-6 col-xl-4 aos-init aos-animate">
                                             <div class="service-card px-4 px-lg-8 py-5 py-lg-10">
                                                 <div class="d-flex gap-3 fs-two n5-color">
                                                     <i class="ph ph-user-circle-plus"></i>
@@ -356,22 +352,33 @@
                                 </div>
 
 
-                                <div data-aos="fade-up">
+                                <div data-aos="fade-up" class="approach">
                                     <h3 class="fs-five n5-color fw-semibold mt-5 mb-2 mb-md-4">
                                         The Approach & Solution
                                     </h3>
-                                    <div class="n5-color fs-seven">
-                                        <b> Prototyping & Testing</b>
-                                        <ul class="">
-                                            <li>Created interactive prototypes for key flows</li>
-                                            <li>Performed usability testing with 10 users</li>
-                                            <li>Iterated on navigation, button placement, and loading states</li>
+                                    <div class="n5-color fs-seven ">
+                                        <b class="mb-3 d-inline-block"> Prototyping & Testing</b>
+                                        <ul class="mb-3">
+                                            <li class="service-card listCard mb-3">Created interactive prototypes for
+                                                key
+                                                flows</li>
+                                            <li class="service-card listCard mb-3">Performed usability testing with 10
+                                                users
+                                            </li>
+                                            <li class="service-card listCard mb-3">Iterated on navigation, button
+                                                placement,
+                                                and loading states</li>
                                         </ul>
-                                        <b class="my-3 d-block">Feedback Highlights:</b>
+                                        <b class="my-3 d-block mt-8">Feedback Highlights:</b>
                                         <ul class="mb-5">
-                                            <li>Users loved the quick access to filters</li>
-                                            <li>Minor confusion over icon meanings (resolved in next version)</li>
-                                            <li>90% completed checkout without assistance</li>
+                                            <li class="service-card listCard mb-3">Users loved the quick access to
+                                                filters
+                                            </li>
+                                            <li class="service-card listCard mb-3">Minor confusion over icon meanings
+                                                (resolved in next version)</li>
+                                            <li class="service-card listCard mb-3">90% completed checkout without
+                                                assistance
+                                            </li>
                                         </ul>
                                         <div class="row g-3 g-md-6 mt-md-5">
                                             <div class="col-sm-6 col-md-4 overflow-hidden">
