--- a/portfolio_details6.html
+++ b/portfolio_details6.html
@@ -296,102 +296,142 @@
                 </div>
 
                 <div data-aos="fade-up">
-                  <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
-                    Project Blueprint
-                  </h3>
-                  <ul class="mb-3 n4-color">
-                    <li>
-                      Centralize and automate lead capture and tracking
-                    </li>
-                    <li>
-                      Provide location-based inventory search and filtering
-                    </li>
-                    <li>
-                      Enable seamless test drive and service appointment scheduling
-                    </li>
-                    <li>
-                      Support multi-role lead assignment (Sales, Finance, Service)
-                    </li>
-                    <li>
-                      Deliver actionable lead performance metrics and reminders
-                    </li>
-                  </ul>
+                  <div class="row">
+                    <div class="col-12">
+                      <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
+                        Project Blueprint
+                      </h3>
+                    </div>
+                    <div class="col-md-6">
+                      <ul class="mb-3 n4-color">
+                        <li>
+                          Centralize and automate lead capture and tracking
+                        </li>
+                        <li>
+                          Provide location-based inventory search and filtering
+                        </li>
+                        <li>
+                          Enable seamless test drive and service appointment scheduling
+                        </li>
+                        <li>
+                          Support multi-role lead assignment (Sales, Finance, Service)
+                        </li>
+                        <li>
+                          Deliver actionable lead performance metrics and reminders
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="overflow-hidden">
+                        <img src="./assets/images/cs-autoaves.png" alt="project" class="w-100 portfolio-details-img" />
+                      </div>
+
+                    </div>
+                  </div>
+
+
                 </div>
 
-                <div data-aos="fade-up">
+                <div data-aos="fade-up" class="approach">
                   <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                     The Challenge
                   </h3>
-                  <p class="text-seven n4-color fw-bold">
-                    Automotive Avenue faced several operational challenges:
-                  </p>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <ul class="mb-3 n4-color">
+                        <li class="mb-3 service-card listCard">
+                          Fragmented lead sources (web, phone, in-person)
+                        </li>
+                        <li class="mb-3 service-card listCard">
+                          Limited visibility into inventory across multiple Colorado branches
+                        </li>
+                        <li class="mb-3 service-card listCard">
+                          Manual appointment booking prone to conflicts
+                        </li>
+                        <li class="mb-3 service-card listCard">
+                          Delays in lead response due to lack of coordinated handoffs
+                        </li>
+                      </ul>
+                    </div>
 
-                  <ul class="mb-3 n4-color">
-                    <li>
-                      Fragmented lead sources (web, phone, in-person)
-                    </li>
-                    <li>
-                      Limited visibility into inventory across multiple Colorado branches
-                    </li>
-                    <li>
-                      Manual appointment booking prone to conflicts
-                    </li>
-                    <li>
-                      Delays in lead response due to lack of coordinated handoffs
-                    </li>
-                  </ul>
+                    <div class="col-md-6">
+                      <div class="overflow-hidden">
+                        <img src="./assets/images/persona-autoaves.png" alt="project"
+                          class="w-100 portfolio-details-img" />
+                      </div>
+
+                    </div>
+                  </div>
+
                 </div>
                 <div data-aos="fade-up">
                   <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                     The Approach & Solution
                   </h3>
-                  <p class="text-seven n4-color mt-4">
-                    <b>Inventory Listing by Location:</b>
-                  <ul class="n4-color">
-                    <li>
-                      Smart filters: make, model, price, mileage, location
-                    </li>
-                    <li>
-                      Location-aware inventory display with Google Maps integration
-                    </li>
-                    <li>
-                      Live stock sync with internal systems across Colorado branches
-                    </li>
-                  </ul>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <p class="text-seven n4-color mt-4">
+                        <b>Inventory Listing by Location:</b>
+                      <ul class="n4-color">
+                        <li>
+                          Smart filters: make, model, price, mileage, location
+                        </li>
+                        <li>
+                          Location-aware inventory display with Google Maps integration
+                        </li>
+                        <li>
+                          Live stock sync with internal systems across Colorado branches
+                        </li>
+                      </ul>
 
-                  </p>
+                      </p>
 
-                  <p class="text-seven n4-color mt-4">
-                    <b>Appointment Scheduling</b>
-                  <ul class="n4-color">
-                    <li>
-                      Visual calendar for sales teams to manage availability
-                    </li>
-                    <li>
-                      Customer-facing booking with real-time confirmations
-                    </li>
-                    <li>
-                      Integrated reminders and follow-up notifications
-                    </li>
-                  </ul>
 
-                  </p>
+                      <p class="text-seven n4-color mt-4">
+                        <b>Appointment Scheduling</b>
+                      <ul class="n4-color">
+                        <li>
+                          Visual calendar for sales teams to manage availability
+                        </li>
+                        <li>
+                          Customer-facing booking with real-time confirmations
+                        </li>
+                        <li>
+                          Integrated reminders and follow-up notifications
+                        </li>
+                      </ul>
 
-                  <p class="text-seven n4-color mt-4 ">
-                    <b>Lead Dashboard</b>
-                  <ul class="n4-color">
-                    <li>
-                      Kanban-style lead cards by stage
-                    </li>
-                    <li>
-                      Quick actions: call, email, schedule
-                    </li>
-                    <li>
-                      Performance analytics: response time, conversion rate, sales rep activity
-                    </li>
-                  </ul>
+                      </p>
 
-                  </p>
+                      <p class="text-seven n4-color mt-4 ">
+                        <b>Lead Dashboard</b>
+                      <ul class="n4-color">
+                        <li>
+                          Kanban-style lead cards by stage
+                        </li>
+                        <li>
+                          Quick actions: call, email, schedule
+                        </li>
+                        <li>
+                          Performance analytics: response time, conversion rate, sales rep activity
+                        </li>
+                      </ul>
+
+                      </p>
+
+                    </div>
+
+                    <div class="col-md-6">
+
+                      <div class="overflow-hidden">
+                        <img src="./assets/images/lf-wireframe.png" alt="project" class="w-100 portfolio-details-img" />
+                      </div>
+
+                    </div>
+                  </div>
+
+
+
 
                   <!--<div class="row g-3 g-md-6 mt-5">
                     
